# nanoad

./: .gitignore  README.md  pyproject.toml
bench/: run.py
docs/: adding-an-op.md  autodiff.md  broadcasting.md  tape.md
examples/: cg_newton.py  tinygpt_sample.txt  train_cnn_cifar10.py  train_cnn_mnist.py  train_mlp_mnist.py  train_tinygpt.py  visualize_graph.py
src/nanoad/: __init__.py  _engine.py  functional.py  tensor.py  viz.py
src/nanoad/data/: __init__.py  cifar10.py  dataloader.py  mnist.py  tinyshakespeare.py  tokenizer.py
src/nanoad/nn/: __init__.py  activations.py  attention.py  batchnorm.py  conv.py  embedding.py  flatten.py  gpt.py  layernorm.py  linear.py  loss.py  module.py  pool.py  sequential.py
src/nanoad/ops/: __init__.py  _broadcast.py  activations.py  bmm.py  (+7 more)
tests/: conftest.py  test_broadcasting.py  test_cnn_forward.py  test_mlp_forward.py  test_synthetic_training.py  test_tensor.py  test_viz.py
tests/data/: test_dataloader.py  test_tokenizer.py
tests/functional/: test_grad.py  test_hessian.py  test_hvp.py  test_jvp.py  test_vjp.py
tests/higher_order/: test_hessian.py
tests/nn/: test_attention.py  test_batchnorm.py  test_conv_pool_flatten.py  test_embedding_module.py  test_gpt.py  test_layernorm.py  test_linear.py  test_module.py  test_module_training.py
tests/ops/: test_activations.py  test_arithmetic.py  test_bmm.py  test_broadcast.py  test_conv2d.py  test_embedding.py  test_linalg.py  test_pool.py  test_reductions.py  test_softmax.py
tests/optim/: test_adam.py  test_adamw.py  test_clip.py  test_scheduler.py  test_sgd.py
(+6 files in other folders)
