[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoad"
version = "0.0.1"
description = "From-scratch reverse-mode autograd and small neural-net framework."
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "eyesupplysky", email = "eyesupplysky@gmail.com" }]
keywords = [
    "autograd",
    "automatic-differentiation",
    "neural-networks",
    "reference-implementation",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nanoad"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--strict-markers", "-ra"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
files = ["src"]
